--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ section {
   margin: 0 auto;
 }
 footer {
-  background-color: #1d428a;
+  background-color: red;
   color: white;
   text-align: center;
   padding: 30px;
